Deploy/progressive_delivery_argo_rollouts/templates/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: cafeapp-argo-rollout-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - cafeweb-gateway
  http:
    - name: argo-rollouts
      match:
        - uri:
            prefix: "/argo-rollouts"
      route:
        - destination:
            host: cafeweb-rollouts-stable
            port:
              number: 80
          weight: 100
        - destination:
            host: cafeweb-rollouts-canary
            port:
              number: 80
          weight: 0
